amend ach formatting

--- a/index.html
+++ b/index.html
@@ -702,22 +702,29 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
           </div>
     </section>
 
-  <!-- New Section: Achievements -->
+<!-- New Section: Achievements -->
 <section id="achievements" class="section scrollspy">
-  <h3 class="page-title white-text teal">Achievements</h3>
+  <h3 class="page-title white-text teal center-align">Achievements</h3>
   <div class="container">
     <div class="row">
 
       <!-- IRAS Silver Award Card -->
       <div class="col s12 m6 l6">
-        <div class="card hoverable">
-          <div class="card-image center-align" style="padding-top: 10px;">
-            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award" style="max-height: 100px; object-fit: contain;">
+        <div class="card hoverable center-align">
+          <div class="card-image" style="padding: 20px 0;">
+            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
+                 style="max-height: 140px; object-fit: contain; margin: 0 auto;">
           </div>
           <div class="card-content">
-            <span class="card-title teal-text text-darken-3" style="font-weight: 600;">IRAS Silver Award</span>
-            <p><b>Event:</b> SIM Global Education</p>
-            <p><b>Date:</b> April 2024</p>
+            <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+              IRAS Silver Award
+            </span>
+            <p style="font-size: 1.1rem; margin-top: 10px;">
+              <strong>Event:</strong> SIM Global Education
+            </p>
+            <p style="font-size: 1.1rem;">
+              <strong>Date:</strong> April 2024
+            </p>
           </div>
         </div>
       </div>
@@ -725,6 +732,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     </div>
   </div>
 </section>
+
 
 
     <!-- Eight Section: Contact -->
