update  ach desc

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
               IRAS Silver Award
             </span>
             <p style="font-size: 1.1rem; margin-top: 10px;">
-              <strong>Event:</strong> SIM Global Education
+              <strong>Event:</strong> SIM Global Education Graduation Ceremony
             </p>
             <p style="font-size: 1.1rem;">
               <strong>Date:</strong> April 2024
