--- a/index.html
+++ b/index.html
@@ -704,27 +704,31 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
 
 <!-- New Section: Achievements -->
 <section id="achievements" class="section scrollspy">
-  <h3 class="page-title white-text teal center-align">Achievements</h3>
+  <h3 class="page-title white-text teal">Achievements</h3>
   <div class="container">
     <div class="row">
 
       <!-- IRAS Silver Award Card -->
       <div class="col s12 m6 l6">
-        <div class="card hoverable center-align">
-          <div class="card-image" style="padding: 20px 0;">
+        <div class="card hoverable">
+          <div class="card-image center-align" style="padding: 20px 0;">
             <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
-                 style="max-height: 140px; object-fit: contain; margin: 0 auto;">
+                 style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
-            <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-              IRAS Silver Award
-            </span>
-            <p style="font-size: 1.1rem; margin-top: 10px;">
-              <strong>Event:</strong> SIM Global Education Graduation Ceremony
-            </p>
-            <p style="font-size: 1.1rem;">
-              <strong>Date:</strong> April 2024
-            </p>
+            <div class="center-align">
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+                IRAS Silver Award
+              </span>
+            </div>
+            <div class="left-align" style="margin-top: 15px;">
+              <p style="font-size: 1.1rem;">
+                <strong>Event:</strong> SIM Global Education Graduation Ceremony
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Date:</strong> April 2024
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -732,8 +736,6 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     </div>
   </div>
 </section>
-
-
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
