format iras award ach

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <p><b>Awards & Honors:</b></p>
             <ul>
               <li>Graduated with Distinction</li>
-              <li>Dean's Merit Award <span class="grey-text text-darken-1">(Top 5%)</span></li>
+              <li>Dean's Merit Award 2022<span class="grey-text text-darken-1">(Top 5%)</span></li>
               <li>IRAS Silver Award <span class="grey-text text-darken-1">– 2nd in B.CompSc (Cyber Security) graduating cohort</span></li>
             </ul>
           </div>
@@ -708,30 +708,65 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   <div class="container">
     <div class="row">
 
-      <!-- IRAS Silver Award Card -->
+   <!-- IRAS Silver Award Card -->
+<div class="col s12 m6 l6">
+  <div class="card hoverable">
+    <div class="card-image center-align" style="padding: 20px 0;">
+      <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
+           style="max-height: 140px; object-fit: contain;">
+    </div>
+    <div class="card-content">
+      <div class="center-align">
+        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+          IRAS Silver Award
+        </span>
+      </div>
+      <div class="left-align" style="margin-top: 15px;">
+        <p style="font-size: 1.1rem;">
+          <strong>Event:</strong> SIM Global Education Graduation Ceremony
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Date:</strong> April 2024
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Location:</strong> SIM HQ, Singapore
+        </p>
+        <p style="font-size: 1rem; color: #616161;">
+          Awarded for graduating <strong>2nd in the B.CompSc (Cyber Security)</strong> cohort among hundreds of graduands.
+        </p>
+        <p style="font-size: 1rem;">
+          <a href="https://www.sim.edu.sg/getmedia/e6b781b8-1d63-4f70-b960-6ce1c1e68aaf/SIM-University-of-Wollongong-Graduation-Ceremony-E-Booklet-2024_1.pdf" target="_blank" class="teal-text text-darken-2">
+            View official e-booklet &#8594;
+          </a>
+        </p>
+            </div>
+          </div>
+        </div>
+  
+ <!-- Deans Merit Award 2022 -->
       <div class="col s12 m6 l6">
         <div class="card hoverable">
           <div class="card-image center-align" style="padding: 20px 0;">
-            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
+            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Deans Merit Award 2022"
                  style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
             <div class="center-align">
               <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                IRAS Silver Award
+                Dean's Merit Award
               </span>
             </div>
             <div class="left-align" style="margin-top: 15px;">
               <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> SIM Global Education Graduation Ceremony
+                <strong>Event:</strong> Dean's Merit Award Presentation Ceremony
               </p>
               <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> April 2024
+                <strong>Date:</strong> Mar 2023
               </p>
             </div>
           </div>
         </div>
-      </div>
+
 
     </div>
   </div>
