--- a/index.html
+++ b/index.html
@@ -708,46 +708,47 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   <div class="container">
     <div class="row">
 
-   <!-- IRAS Silver Award Card -->
-<div class="col s12 m6 l6">
-  <div class="card hoverable">
-    <div class="card-image center-align" style="padding: 20px 0;">
-      <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
-           style="max-height: 140px; object-fit: contain;">
-    </div>
-    <div class="card-content">
-      <div class="center-align">
-        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-          IRAS Silver Award
-        </span>
-      </div>
-      <div class="left-align" style="margin-top: 15px;">
-        <p style="font-size: 1.1rem;">
-          <strong>Event:</strong> SIM Global Education Graduation Ceremony
-        </p>
-        <p style="font-size: 1.1rem;">
-          <strong>Date:</strong> April 2024
-        </p>
-        <p style="font-size: 1.1rem;">
-          <strong>Location:</strong> SIM HQ, Singapore
-        </p>
-        <p style="font-size: 1rem; color: #616161;">
-          Awarded for graduating <strong>2nd in the B.CompSc (Cyber Security)</strong> cohort among hundreds of graduands.
-        </p>
-        <p style="font-size: 1rem;">
-          <a href="https://www.sim.edu.sg/getmedia/e6b781b8-1d63-4f70-b960-6ce1c1e68aaf/SIM-University-of-Wollongong-Graduation-Ceremony-E-Booklet-2024_1.pdf" target="_blank" class="teal-text text-darken-2">
-            View official e-booklet &#8594;
-          </a>
-        </p>
-            </div>
-          </div>
-        </div>
-  
- <!-- Deans Merit Award 2022 -->
+      <!-- IRAS Silver Award Card -->
       <div class="col s12 m6 l6">
         <div class="card hoverable">
           <div class="card-image center-align" style="padding: 20px 0;">
-            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Deans Merit Award 2022"
+            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
+                 style="max-height: 140px; object-fit: contain;">
+          </div>
+          <div class="card-content">
+            <div class="center-align">
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+                IRAS Silver Award
+              </span>
+            </div>
+            <div class="left-align" style="margin-top: 15px;">
+              <p style="font-size: 1.1rem;">
+                <strong>Event:</strong> SIM Global Education Graduation Ceremony
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Date:</strong> April 2024
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Location:</strong> SIM Global Education
+              </p>
+              <p style="font-size: 1rem; color: #616161;">
+                Awarded for graduating <strong>2nd in the B.CompSc (Cyber Security)</strong> cohort among hundreds of graduands.
+              </p>
+              <p style="font-size: 1rem;">
+                <a href="https://www.sim.edu.sg/getmedia/e6b781b8-1d63-4f70-b960-6ce1c1e68aaf/SIM-University-of-Wollongong-Graduation-Ceremony-E-Booklet-2024_1.pdf" target="_blank" class="teal-text text-darken-2">
+                  View official e-booklet &#8594;
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Dean's Merit Award 2022 Card -->
+      <div class="col s12 m6 l6">
+        <div class="card hoverable">
+          <div class="card-image center-align" style="padding: 20px 0;">
+            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
                  style="max-height: 140px; object-fit: contain;">
           </div>
           <div class="card-content">
@@ -763,14 +764,18 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
               <p style="font-size: 1.1rem;">
                 <strong>Date:</strong> Mar 2023
               </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Location:</strong> SIM Global Education
+              </p>
             </div>
           </div>
         </div>
+      </div>
 
-
-    </div>
-  </div>
+    </div> <!-- END ROW -->
+  </div> <!-- END CONTAINER -->
 </section>
+
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
