update deans merit award

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
             </div>
             <div class="left-align" style="margin-top: 15px;">
               <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> SIM Global Education Graduation Ceremony
+                <strong>Event:</strong> SIM-UOW Graduation Ceremony
               </p>
               <p style="font-size: 1.1rem;">
                 <strong>Date:</strong> April 2024
@@ -744,33 +744,37 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
         </div>
       </div>
 
-      <!-- Dean's Merit Award 2022 Card -->
-      <div class="col s12 m6 l6">
-        <div class="card hoverable">
-          <div class="card-image center-align" style="padding: 20px 0;">
-            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
-                 style="max-height: 140px; object-fit: contain;">
-          </div>
-          <div class="card-content">
-            <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                Dean's Merit Award
-              </span>
-            </div>
-            <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> Dean's Merit Award Presentation Ceremony
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> Mar 2023
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> SIM Global Education
-              </p>
-            </div>
-          </div>
-        </div>
+     <!-- Dean's Merit Award 2022 Card -->
+<div class="col s12 m6 l6">
+  <div class="card hoverable">
+    <div class="card-image center-align" style="padding: 20px 0;">
+      <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
+           style="max-height: 140px; object-fit: contain;">
+    </div>
+    <div class="card-content">
+      <div class="center-align">
+        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+          Dean's Merit Award
+        </span>
       </div>
+      <div class="left-align" style="margin-top: 15px;">
+        <p style="font-size: 1.1rem;">
+          <strong>Event:</strong> Dean's Merit Award Presentation Ceremony
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Date:</strong> Mar 2023
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Location:</strong> SIM Global Education
+        </p>
+        <p style="font-size: 1rem; color: #616161;">
+          Awarded to students in the <strong>top 5% of their faculty</strong> who achieved a <strong>Weighted Average Mark (WAM) of 85 or above</strong> in an academic year.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     </div> <!-- END ROW -->
   </div> <!-- END CONTAINER -->
