tryfix formatting ach

--- a/index.html
+++ b/index.html
@@ -709,9 +709,9 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     <div class="row">
 
       <!-- IRAS Silver Award Card -->
-      <div class="col s12 m6 l6">
-        <div class="card hoverable">
-          <div class="card-image center-align" style="padding: 20px 0;">
+      <div class="col s12 m6">
+        <div class="card hoverable" style="margin-bottom: 30px;">
+          <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
                  style="max-height: 140px; object-fit: contain;">
           </div>
@@ -744,41 +744,41 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
         </div>
       </div>
 
-     <!-- Dean's Merit Award 2022 Card -->
-<div class="col s12 m6 l6">
-  <div class="card hoverable">
-    <div class="card-image center-align" style="padding: 20px 0;">
-      <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
-           style="max-height: 140px; object-fit: contain;">
-    </div>
-    <div class="card-content">
-      <div class="center-align">
-        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-          Dean's Merit Award
-        </span>
+      <!-- Dean's Merit Award 2022 Card -->
+      <div class="col s12 m6">
+        <div class="card hoverable" style="margin-bottom: 30px;">
+          <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
+            <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
+                 style="max-height: 140px; object-fit: contain;">
+          </div>
+          <div class="card-content">
+            <div class="center-align">
+              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+                Dean's Merit Award
+              </span>
+            </div>
+            <div class="left-align" style="margin-top: 15px;">
+              <p style="font-size: 1.1rem;">
+                <strong>Event:</strong> Dean's Merit Award Presentation Ceremony
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Date:</strong> March 2023
+              </p>
+              <p style="font-size: 1.1rem;">
+                <strong>Location:</strong> SIM Global Education
+              </p>
+              <p style="font-size: 1rem; color: #616161;">
+                Awarded to students in the <strong>top 5% of their faculty</strong> who achieved a <strong>Weighted Average Mark (WAM) of 85 or above</strong> in an academic year.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="left-align" style="margin-top: 15px;">
-        <p style="font-size: 1.1rem;">
-          <strong>Event:</strong> Dean's Merit Award Presentation Ceremony
-        </p>
-        <p style="font-size: 1.1rem;">
-          <strong>Date:</strong> March 2023
-        </p>
-        <p style="font-size: 1.1rem;">
-          <strong>Location:</strong> SIM Global Education
-        </p>
-        <p style="font-size: 1rem; color: #616161;">
-          Awarded to students in the <strong>top 5% of their faculty</strong> who achieved a <strong>Weighted Average Mark (WAM) of 85 or above</strong> in an academic year.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
 
- <!-- N0H4TS STANDCON 2022 Card -->
-      <div class="col s12 m6 l6">
-        <div class="card hoverable">
-          <div class="card-image center-align" style="padding: 20px 0;">
+      <!-- N0H4TS STANDCON 2022 Card -->
+      <div class="col s12 m6">
+        <div class="card hoverable" style="margin-bottom: 30px;">
+          <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/STANDCON 2022.jpg" alt="N0H4TS STANDCON 2022"
                  style="max-height: 140px; object-fit: contain;">
           </div>
@@ -807,10 +807,10 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
       </div>
 
       <!-- CSIT Challenge of Wits Week 3 -->
-      <div class="col s12 m6 l6">
+      <div class="col s12 m6">
         <a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" style="text-decoration: none;">
-          <div class="card hoverable">
-            <div class="card-image center-align" style="padding: 20px 0;">
+          <div class="card hoverable" style="margin-bottom: 30px;">
+            <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
               <img src="/assets/img/CSIT-COW.jpg" alt="CSIT Challenge of Wits Week 3"
                    style="max-height: 140px; object-fit: contain;">
             </div>
