--- a/index.html
+++ b/index.html
@@ -806,38 +806,43 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
         </div>
       </div>
 
-      <!-- CSIT Challenge of Wits Week 3 -->
-      <div class="col s12 m6">
-        <a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" style="text-decoration: none;">
-          <div class="card hoverable" style="margin-bottom: 30px;">
-            <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-              <img src="/assets/img/CSIT-COW.jpg" alt="CSIT Challenge of Wits Week 3"
-                   style="max-height: 140px; object-fit: contain;">
-            </div>
-            <div class="card-content">
-              <div class="center-align">
-                <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                  Grand Prize Winner
-                </span>
-              </div>
-              <div class="left-align" style="margin-top: 15px;">
-                <p style="font-size: 1.1rem;">
-                  <strong>Event:</strong> CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography Prize Collection
-                </p>
-                <p style="font-size: 1.1rem;">
-                  <strong>Date:</strong> April 2022
-                </p>
-                <p style="font-size: 1.1rem;">
-                  <strong>Location:</strong> Centre for Strategic Infocomm Technologies (CSIT)
-                </p>
-                <p style="font-size: 1rem; color: #616161;">
-                  Awarded the grand prize for <strong>CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography</strong>, selected from among hundreds of participants for accurately solving the challenge.
-                </p>
-              </div>
-            </div>
-          </div>
-        </a>
+    <!-- CSIT Challenge of Wits Week 3 -->
+<div class="col s12 m6">
+  <div class="card hoverable" style="margin-bottom: 30px;">
+    <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
+      <img src="/assets/img/CSIT-COW.jpg" alt="CSIT Challenge of Wits Week 3"
+           style="max-height: 140px; object-fit: contain;">
+    </div>
+    <div class="card-content">
+      <div class="center-align">
+        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+          Grand Prize Winner
+        </span>
       </div>
+      <div class="left-align" style="margin-top: 15px;">
+        <p style="font-size: 1.1rem;">
+          <strong>Event:</strong> CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography Prize Collection
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Date:</strong> April 2022
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Location:</strong> Centre for Strategic Infocomm Technologies (CSIT)
+        </p>
+        <p style="font-size: 1rem; color: #616161;">
+          Awarded the grand prize for <strong>CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography</strong>, selected from among hundreds of participants for accurately solving the challenge.
+        </p>
+        <!-- Separate link below, not wrapping whole card -->
+        <p style="font-size: 1rem;">
+          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" class="teal-text text-darken-2">
+            View LinkedIn post &#8594;
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     </div> <!-- END ROW -->
   </div> <!-- END CONTAINER -->
