--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
           </div>
         </div>
       </div>
-
+<div class="row">
       <!-- N0H4TS STANDCON 2022 Card -->
       <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
@@ -843,7 +843,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   </div>
 </div>
 
-
+</div>
     </div> <!-- END ROW -->
   </div> <!-- END CONTAINER -->
 </section>
