--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
           </div>
         </div>
       </div>
-<div class="row">
+
       <!-- N0H4TS STANDCON 2022 Card -->
       <div class="col s12 m6">
         <div class="card hoverable" style="margin-bottom: 30px;">
@@ -843,7 +843,48 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   </div>
 </div>
 
+   <!-- AISP Singapore Cyber Day 2021 -->
+<div class="col s12 m6">
+  <div class="card hoverable" style="margin-bottom: 30px;">
+    <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
+      <img src="/assets/img/AISP.jpg" alt="AISP Singapore Cyber Day 2021 Quiz"
+           style="max-height: 140px; object-fit: contain;">
+    </div>
+    <div class="card-content">
+      <div class="center-align">
+        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+          Top 3 Winner
+        </span>
+      </div>
+      <div class="left-align" style="margin-top: 15px;">
+        <p style="font-size: 1.1rem;">
+          <strong>Event:</strong> AiSP Singapore Cyber Day Quiz Prize Presentation
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Date:</strong> February 2022
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Location:</strong> Fortinet Singapore Pte Ltd
+        </p>
+        <p style="font-size: 1rem; color: #616161;">
+          Placed in the Top 3 of AiSP's national cyber quiz for youth (25 and below), recognized for cyber knowledge and situational awareness. Top 3 Winners’ parents were also invited to the award ceremony.
+        </p>
+        <p style="font-size: 1rem;">
+          <a href="https://www.facebook.com/photo/?fbid=4858659787555875&set=a.4858764924212028" target="_blank" class="teal-text text-darken-2">
+            View Facebook post &#8594;
+          </a>
+        </p>
+        <p style="font-size: 1rem;">
+          <a href="https://www.aisp.sg/document/newsletter/AISP%20Newsletter_2022/AiSP_Newsletter_2022%20February.pdf" target="_blank" class="teal-text text-darken-2">
+            View AiSP Newsletter &#8594;
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
+
+
     </div> <!-- END ROW -->
   </div> <!-- END CONTAINER -->
 </section>
