tryfix format ach

--- a/index.html
+++ b/index.html
@@ -775,38 +775,38 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
         </div>
       </div>
 
-      <!-- N0H4TS STANDCON 2022 Card -->
-      <div class="col s12 m6">
-        <div class="card hoverable" style="margin-bottom: 30px;">
-          <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
-            <img src="/assets/img/STANDCON 2022.jpg" alt="N0H4TS STANDCON 2022"
-                 style="max-height: 140px; object-fit: contain;">
-          </div>
-          <div class="card-content">
-            <div class="center-align">
-              <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
-                Lucky Draw Winner
-              </span>
-            </div>
-            <div class="left-align" style="margin-top: 15px;">
-              <p style="font-size: 1.1rem;">
-                <strong>Event:</strong> N0H4TS STANDCON 2022 Prize Giving Ceremony 
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Date:</strong> July 2022
-              </p>
-              <p style="font-size: 1.1rem;">
-                <strong>Location:</strong> ASEAN-Singapore Cybersecurity Centre of Excellence (ASCCE)
-              </p>
-              <p style="font-size: 1rem; color: #616161;">
-                Awarded to a few participants, chosen by lucky draw from among the most active in the STANDCON 2022 CTF competition.
-              </p>
-            </div>
-          </div>
-        </div>
+    <!-- Lucky Draw Winner: STANDCON 2022 -->
+<div class="col s12 m6">
+  <div class="card hoverable" style="margin-bottom: 30px;">
+    <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
+      <img src="/assets/img/STANDCON 2022.jpg" alt="N0H4TS STANDCON 2022"
+           style="max-height: 140px; object-fit: contain;">
+    </div>
+    <div class="card-content">
+      <div class="center-align">
+        <span class="card-title teal-text text-darken-3" style="font-weight: 600; font-size: 1.5rem;">
+          Lucky Draw Winner
+        </span>
       </div>
+      <div class="left-align" style="margin-top: 15px;">
+        <p style="font-size: 1.1rem;">
+          <strong>Event:</strong> N0H4TS STANDCON 2022 Prize Giving Ceremony 
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Date:</strong> July 2022
+        </p>
+        <p style="font-size: 1.1rem;">
+          <strong>Location:</strong> ASEAN-Singapore Cybersecurity Centre of Excellence (ASCCE)
+        </p>
+        <p style="font-size: 1rem; color: #616161;">
+          Awarded to a few participants, chosen by lucky draw from among the most active in the STANDCON 2022 CTF competition.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 
-    <!-- CSIT Challenge of Wits Week 3 -->
+<!-- CSIT Challenge of Wits Week 3 -->
 <div class="col s12 m6">
   <div class="card hoverable" style="margin-bottom: 30px;">
     <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
@@ -832,7 +832,6 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
         <p style="font-size: 1rem; color: #616161;">
           Awarded the grand prize for <strong>CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography</strong>, selected from among hundreds of participants for accurately solving the challenge.
         </p>
-        <!-- Separate link below, not wrapping whole card -->
         <p style="font-size: 1rem;">
           <a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" class="teal-text text-darken-2">
             View LinkedIn post &#8594;
@@ -843,7 +842,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   </div>
 </div>
 
-   <!-- AISP Singapore Cyber Day 2021 -->
+<!-- AiSP Singapore Cyber Day 2021 -->
 <div class="col s12 m6">
   <div class="card hoverable" style="margin-bottom: 30px;">
     <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
@@ -875,7 +874,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
           </a>
         </p>
         <p style="font-size: 1rem;">
-          <a href="https://www.aisp.sg/document/newsletter/AISP%20Newsletter_2022/AiSP_Newsletter_2022%20February.pdf" target="_blank" class="teal-text text-darken-2">
+          <a href="https://www.aisp.sg/document/newsletter/AISP%20Newsletter%202022/AiSP_Newsletter_2022%20February.pdf" target="_blank" class="teal-text text-darken-2">
             View AiSP Newsletter &#8594;
           </a>
         </p>
@@ -883,6 +882,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     </div>
   </div>
 </div>
+
 
 
     </div> <!-- END ROW -->
