tryfix rows  in ach

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     <div class="row">
 
       <!-- IRAS Silver Award Card -->
-      <div class="col s6 m6">
+      <div class="col s6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award"
@@ -745,7 +745,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
       </div>
 
       <!-- Dean's Merit Award 2022 Card -->
-      <div class="col s6 m6">
+      <div class="col s6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/Gadiel Lau Rongzheng_DeansMeritAward.jpg" alt="Dean's Merit Award 2022"
@@ -776,7 +776,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
       </div>
 
       <!-- Lucky Draw Winner: STANDCON 2022 -->
-      <div class="col s6 m6">
+      <div class="col s6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/STANDCON 2022.jpg" alt="N0H4TS STANDCON 2022"
@@ -807,7 +807,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
       </div>
 
       <!-- CSIT Challenge of Wits Week 3 -->
-      <div class="col s6 m6">
+      <div class="col s6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/CSIT-COW.jpg" alt="CSIT Challenge of Wits Week 3"
@@ -843,7 +843,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
       </div>
 
       <!-- AiSP Singapore Cyber Day 2021 -->
-      <div class="col s6 m6">
+      <div class="col s6">
         <div class="card hoverable" style="margin-bottom: 30px;">
           <div class="card-image center-align" style="height: 160px; display: flex; justify-content: center; align-items: center;">
             <img src="/assets/img/AISP.jpg" alt="AISP Singapore Cyber Day 2021 Quiz"
@@ -886,6 +886,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
     </div> <!-- END ROW -->
   </div> <!-- END CONTAINER -->
 </section>
+
 
 
 
